Incluido formatação automática para ES6 no .editconfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,8 @@ trim_trailing_whitespace = true
 
 [*.ts]
 quote_type = single
+# Incluindo para colocar espaço entre {} dos imports do typescript
+ij_typescript_spaces_within_imports = true
 
 [*.md]
 max_line_length = off
